--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,12 +141,33 @@ input{
 }
 
 .restaurant-info{
-   width: 49vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   width: 48vw;
    height: 15vh;
+   padding: 10px;
 
     background-color: white;
 }
 
+.info{
+    display: flex;
+    font-size: 70px;
+}
+
+.moblie{
+    display: none;
+}
+
+p{
+    margin-top: 3px;
+    margin-bottom: 0px;
+
+    font-style: italic;
+    font-size: 30px;
+}
 
 .map{
     width: 45vw;
@@ -170,6 +191,28 @@ input{
     width: 85px;
     right: 30px;
     bottom: 40px;
+}
+
+.restaurant-info{
+    width: 45vw;
+    height: 13vh;
+    padding: 9px;
+}
+
+.info{
+    font-size: 15px;
+}
+
+.PC{
+    display: none;
+}
+
+.moblie{
+    display: block;
+}
+
+p{
+    font-size: 12px;
 }
 
 }
